--- a/reprocess_reanalyze_smallRNA_seq_Akbari_to_upload.Rmd
+++ b/reprocess_reanalyze_smallRNA_seq_Akbari_to_upload.Rmd
@@ -12,223 +12,221 @@ library(stringr)
 library(reshape2)
 ```
 
-<!-- ```{r} -->
-<!-- #small RNA seq data were downloaded from ENA: https://www.ebi.ac.uk/ena/browser/home -->
-<!-- #accession: PRJNA612346 -->
-<!-- #because the data are large, reprocessing are shown but commented out -->
-<!-- Dir <- "/Users/kathryn/Reprocess_all_paper_datasets/Akbari_check_esiRNAs" -->
-<!-- pathtogunzip <- dir(Dir, pattern= "*.fastq.gz", full.names = TRUE) -->
-<!-- gunzip <- function(fileToGunZip,gunzip="gunzip", -->
-<!--                    stderr=paste0(getwd(),"gunzip_stderr"), -->
-<!--                    stdout=paste0(getwd(),"gunzip_stdout")){ -->
-<!--   cmd <- gunzip -->
-<!--   if(!file.exists(fileToGunZip))stop("File does not exist") -->
+##small RNA-seq from Akbari et al. 2013 are shown but were commented out because the files are very large
 
-<!--   fileWithoutExtension <- tools::file_path_sans_ext(fileToGunZip) -->
-<!--   if(file.exists(fileToGunZip) & !file.exists(fileWithoutExtension)){ -->
-<!--     args <- c(fileWithoutExtension,"-k") -->
-<!--     print(cmd) -->
-<!--     print(args) -->
+```{r}
+# #small RNA seq data were downloaded from ENA: https://www.ebi.ac.uk/ena/browser/home
+# #accession: PRJNA612346
+#
+# Dir <- "/Users/kathryn/Reprocess_all_paper_datasets/Akbari_check_esiRNAs"
+# pathtogunzip <- dir(Dir, pattern= "*.fastq.gz", full.names = TRUE)
+# gunzip <- function(fileToGunZip,gunzip="gunzip",
+#                    stderr=paste0(getwd(),"gunzip_stderr"),
+#                    stdout=paste0(getwd(),"gunzip_stdout")){
+#   cmd <- gunzip
+#   if(!file.exists(fileToGunZip))stop("File does not exist")
+# 
+#   fileWithoutExtension <- tools::file_path_sans_ext(fileToGunZip)
+#   if(file.exists(fileToGunZip) & !file.exists(fileWithoutExtension)){
+#     args <- c(fileWithoutExtension,"-k")
+#     print(cmd)
+#     print(args)
+# 
+#     system2(cmd,
+#             args,
+#             stdout=stdout,
+#             stderr=stderr
+#     )
+#   }
+#   return(fileWithoutExtension)
+# }
+# 
+# 
+# for (file in pathtogunzip) {
+#   gunzip(file)
+# }
+# 
+# 
+# pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# toqf <- dir(pathtoQC , pattern= "*.fastq$", full.names = TRUE)
+# 
+# fastq_quality_filter <- function(fileTofqf,fqf="fastq_quality_filter",qEncoding=33,
+#                                  minimumQuality=20,
+#                                  minimumPercentOfRead=80,
+#                                  stderr=paste0(getwd(),"fastq_quality_filter_stderr"),
+#                                  stdout=paste0(getwd(),"fastq_quality_filter_stdout")){
+# 
+# 
+#   cmd <- fqf
+# 
+#   if(!file.exists(fileTofqf))stop("File does not exist")
+# 
+#   file_fqf <- file.path(dirname(fileTofqf),paste0("QF_",basename(fileTofqf)))
+#   if(file.exists(fileTofqf) & !file.exists(file_fqf)){
+# 
+# 
+#     args <- c(
+#       paste0("-Q ",qEncoding),
+#       paste0("-q ",minimumQuality),
+#       paste0("-p ",minimumPercentOfRead),
+#       paste0("-i  ",fileTofqf),
+#       paste0("-o ",file_fqf)
+#     )
+#     print(cmd)
+#     print(args)
+# 
+#     system2(cmd,
+#             args,
+#             stdout=stdout,
+#             stderr=stderr
+#     )
+#   }
+#   return(file_fqf)
+# }
+# 
+# #R command to quality filter:
+# file_QF <- fastq_quality_filter(file,fqf = "/Users/kathryn/FastX/fastq_quality_filter")
+# bplapply(toqf,  fastq_quality_filter, fqf = "/rugpfs/fs0/home/krozen/bin/fastq_quality_filter")
+# 
+# 
+# pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# tocoll <- dir(pathtoQC , pattern= "*.fastq$", full.names = TRUE)
+# fastx_collapser <- function(fileTofxc,fxc="fastx_collapser",qEncoding=33,
+#                             stderr=file.path(getwd(),"fastq_collapse_stderr"),
+#                             stdout=file.path(getwd(),"fastq_collapse_stdout")){
+#   cmd <- fxc
+# 
+#   if(!file.exists(fileTofxc))stop("File does not exist")
+# 
+#   file_fxc <- file.path(dirname(fileTofxc),gsub("\\.fa","_collapse.fasta",basename(fileTofxc)))
+#   if(file.exists(fileTofxc) & !file.exists(file_fxc)){
+# 
+#     args <- c(
+#       paste0("-v "),
+#       paste0("-Q ",qEncoding),
+#       paste0("-i  ",fileTofxc),
+#       paste0("-o ",file_fxc)
+#     )
+#     print(cmd)
+#     print(args)
+# 
+#     system2(cmd,
+#             args,
+#             stdout=stdout,
+#             stderr=stderr
+#     )
+#   }
+#   return(file_fxc)
+# }
+# 
+# bplapply(tocoll, fastx_collapser, fxc="/rugpfs/fs0/home/krozen/bin/fastx_collapser")
+# file_collapse <- fastx_collapser(file_QF,fxc="/rugpfs/fs0/home/krozen/bin/fastx_collapser")
+# 
+# 
+# fastx_clipper <- function(fileTofqs,fqc="fastx_clipper",length=18,
+#                           adaptor="CTGTAGGCACCATCAATC",
+#                           stderr=file.path(getwd(),"clipper_stats_stderr"),
+#                           stdout=file.path(getwd(),"clipper_stats_stdout")){
+#   cmd <- fqc
+# 
+#   if(!file.exists(fileTofqs))stop("File does not exist")
+# 
+#   file_fqs <- file.path(dirname(fileTofqs),gsub(".fastastq",".fa",basename(fileTofqs)))
+#   if(file.exists(fileTofqs) & !file.exists(file_fqs)){
+# 
+#     args <- c(
+#       paste0("-l ",length),
+#       paste0("-a  ",adaptor),
+#       paste0("-o ",file_fqs),
+#       paste0("-i ",fileTofqs)
+#     )
+#     print(cmd)
+#     print(args)
+# 
+#     system2(cmd,
+#             args,
+#             stdout=stdout,
+#             stderr=stderr
+#     )
+#   }
+#   return(file_fqs)
+# }
+# 
+# #R command to clip linker:
+# pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# toclip <- dir(pathtoQC , pattern= "*fastastq$", full.names = TRUE)
+# 
+# bplapply(toclip, fastx_clipper, fqc = "/rugpfs/fs0/home/krozen/bin/fastx_clipper")
+# ##revmap, first make index
+# 
+# #make indices for mapping
+# pathtoQC <-  "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# unmapped <- dir(pathtoQC,pattern="*.fa$",full.names = TRUE)
+# bowtie_index <- function(genomeFasta,
+#                          outFasta=gsub("\\.fa","",genomeFasta)
+# ) {
+#   require(Rbowtie2)
+#   if(!dir.exists(outFasta)){
+#     bowtie2_build(references=genomeFasta,
+#                   bt2Index=outFasta)
+#   }
+# 
+# }
+# 
+# for (i in unmapped) {
+#   bowtie_index(i, i)
+# }
+# bplapply(unmapped, unmapped, i)
+# 
+# 
+# #reverse map to all filtered known
+# bowtie_align <- function(fq,index,sam=gsub("\\.fq|\\.fastq|\\.rm|\\.fa",".sam",index)
+# ) {
+#   require(Rbowtie2)
+#   if(!dir.exists(sam)){
+#     bowtie2(bt2Index = index,
+#             samOutput = sam,
+#             seq1 = fq,"--threads 4 -f -L 18 -k 1000000")
+#     Rsamtools::asBam(sam,gsub("\\.sam","",sam))
+#   }
+# 
+# }
+# 
+# pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# ref <- dir(pathtoQC , pattern= "*fa$", full.names = TRUE)
+# ref <- gsub(".fa", unmapped)
+# bplapply(x= "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs/all_unique_filt_sRNAs_rn.fa", bowtie_align, index= ref)
+# 
+# for (i in unmapped) {
+#   bowtie_align("/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs/all_unique_filt_sRNAs_rn.fa", i)}
+# 
+# #convert to BED:
+# 
+# bamtobed <- function(file,filtDup=FALSE){
+#   require(GenomicAlignments)
+#   require(rtracklayer)
+#   temp <- readGAlignments(file,
+#                           param=ScanBamParam(what = "qname"))
+#   names(temp) <- mcols(temp)$qname
+#   temp <- granges(temp)
+# 
+#   if(filtDup) temp <- temp[!duplicated(temp),]
+#   export.bed(temp,
+#              con = gsub("\\.bam",".bed",file))
+# }
+# 
+# #R command for bamtobed:
+# pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs"
+# mapped <- dir(pathtoQC , pattern= "bam$", full.names = TRUE)
+# 
+# bplapply(mapped, bamtobed)
 
-<!--     system2(cmd, -->
-<!--             args, -->
-<!--             stdout=stdout, -->
-<!--             stderr=stderr -->
-<!--     ) -->
-<!--   } -->
-<!--   return(fileWithoutExtension) -->
-<!-- } -->
-
-
-<!-- for (file in pathtogunzip) { -->
-<!--   gunzip(file) -->
-<!-- } -->
-
-
-<!-- pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- toqf <- dir(pathtoQC , pattern= "*.fastq$", full.names = TRUE) -->
-
-<!-- fastq_quality_filter <- function(fileTofqf,fqf="fastq_quality_filter",qEncoding=33, -->
-<!--                                  minimumQuality=20, -->
-<!--                                  minimumPercentOfRead=80,                                  -->
-<!--                                  stderr=paste0(getwd(),"fastq_quality_filter_stderr"), -->
-<!--                                  stdout=paste0(getwd(),"fastq_quality_filter_stdout")){ -->
-
-
-<!--   cmd <- fqf -->
-
-<!--   if(!file.exists(fileTofqf))stop("File does not exist") -->
-
-<!--   file_fqf <- file.path(dirname(fileTofqf),paste0("QF_",basename(fileTofqf))) -->
-<!--   if(file.exists(fileTofqf) & !file.exists(file_fqf)){ -->
-
-
-<!--     args <- c( -->
-<!--       paste0("-Q ",qEncoding), -->
-<!--       paste0("-q ",minimumQuality), -->
-<!--       paste0("-p ",minimumPercentOfRead), -->
-<!--       paste0("-i  ",fileTofqf), -->
-<!--       paste0("-o ",file_fqf)       -->
-<!--     ) -->
-<!--     print(cmd) -->
-<!--     print(args) -->
-
-<!--     system2(cmd, -->
-<!--             args, -->
-<!--             stdout=stdout, -->
-<!--             stderr=stderr -->
-<!--     ) -->
-<!--   } -->
-<!--   return(file_fqf) -->
-<!-- } -->
-
-<!-- #R command to quality filter: -->
-<!-- file_QF <- fastq_quality_filter(file,fqf = "/Users/kathryn/FastX/fastq_quality_filter") -->
-<!-- bplapply(toqf,  fastq_quality_filter, fqf = "/rugpfs/fs0/home/krozen/bin/fastq_quality_filter") -->
-
-
-<!-- pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- tocoll <- dir(pathtoQC , pattern= "*.fastq$", full.names = TRUE) -->
-<!-- fastx_collapser <- function(fileTofxc,fxc="fastx_collapser",qEncoding=33, -->
-<!--                             stderr=file.path(getwd(),"fastq_collapse_stderr"), -->
-<!--                             stdout=file.path(getwd(),"fastq_collapse_stdout")){ -->
-<!--   cmd <- fxc -->
-
-<!--   if(!file.exists(fileTofxc))stop("File does not exist") -->
-
-<!--   file_fxc <- file.path(dirname(fileTofxc),gsub("\\.fa","_collapse.fasta",basename(fileTofxc))) -->
-<!--   if(file.exists(fileTofxc) & !file.exists(file_fxc)){ -->
-
-<!--     args <- c( -->
-<!--       paste0("-v "), -->
-<!--       paste0("-Q ",qEncoding), -->
-<!--       paste0("-i  ",fileTofxc), -->
-<!--       paste0("-o ",file_fxc)       -->
-<!--     ) -->
-<!--     print(cmd) -->
-<!--     print(args) -->
-
-<!--     system2(cmd, -->
-<!--             args, -->
-<!--             stdout=stdout, -->
-<!--             stderr=stderr -->
-<!--     ) -->
-<!--   } -->
-<!--   return(file_fxc) -->
-<!-- } -->
-
-<!-- bplapply(tocoll, fastx_collapser, fxc="/rugpfs/fs0/home/krozen/bin/fastx_collapser") -->
-<!-- file_collapse <- fastx_collapser(file_QF,fxc="/rugpfs/fs0/home/krozen/bin/fastx_collapser") -->
-
-
-<!-- fastx_clipper <- function(fileTofqs,fqc="fastx_clipper",length=18, -->
-<!--                           adaptor="CTGTAGGCACCATCAATC", -->
-<!--                           stderr=file.path(getwd(),"clipper_stats_stderr"), -->
-<!--                           stdout=file.path(getwd(),"clipper_stats_stdout")){ -->
-<!--   cmd <- fqc -->
-
-<!--   if(!file.exists(fileTofqs))stop("File does not exist") -->
-
-<!--   file_fqs <- file.path(dirname(fileTofqs),gsub(".fastastq",".fa",basename(fileTofqs))) -->
-<!--   if(file.exists(fileTofqs) & !file.exists(file_fqs)){ -->
-
-<!--     args <- c( -->
-<!--       paste0("-l ",length), -->
-<!--       paste0("-a  ",adaptor), -->
-<!--       paste0("-o ",file_fqs), -->
-<!--       paste0("-i ",fileTofqs) -->
-<!--     ) -->
-<!--     print(cmd) -->
-<!--     print(args) -->
-
-<!--     system2(cmd, -->
-<!--             args, -->
-<!--             stdout=stdout, -->
-<!--             stderr=stderr -->
-<!--     ) -->
-<!--   } -->
-<!--   return(file_fqs) -->
-<!-- } -->
-
-<!-- #R command to clip linker: -->
-<!-- pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- toclip <- dir(pathtoQC , pattern= "*fastastq$", full.names = TRUE) -->
-
-<!-- bplapply(toclip, fastx_clipper, fqc = "/rugpfs/fs0/home/krozen/bin/fastx_clipper")  -->
-<!-- ##revmap, first make index -->
-
-<!-- #make indices for mapping -->
-<!-- pathtoQC <-  "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- unmapped <- dir(pathtoQC,pattern="*.fa$",full.names = TRUE) -->
-<!-- bowtie_index <- function(genomeFasta, -->
-<!--                          outFasta=gsub("\\.fa","",genomeFasta) -->
-<!-- ) { -->
-<!--   require(Rbowtie2) -->
-<!--   if(!dir.exists(outFasta)){ -->
-<!--     bowtie2_build(references=genomeFasta,  -->
-<!--                   bt2Index=outFasta) -->
-<!--   } -->
-
-<!-- } -->
-
-<!-- for (i in unmapped) { -->
-<!--   bowtie_index(i, i) -->
-<!-- } -->
-<!-- bplapply(unmapped, unmapped, i) -->
-
-
-<!-- #reverse map to all filtered known   -->
-<!-- bowtie_align <- function(fq,index,sam=gsub("\\.fq|\\.fastq|\\.rm|\\.fa",".sam",index) -->
-<!-- ) { -->
-<!--   require(Rbowtie2) -->
-<!--   if(!dir.exists(sam)){ -->
-<!--     bowtie2(bt2Index = index, -->
-<!--             samOutput = sam, -->
-<!--             seq1 = fq,"--threads 4 -f -L 18 -k 1000000") -->
-<!--     Rsamtools::asBam(sam,gsub("\\.sam","",sam)) -->
-<!--   } -->
-
-<!-- } -->
-
-<!-- pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- ref <- dir(pathtoQC , pattern= "*fa$", full.names = TRUE) -->
-<!-- ref <- gsub(".fa", unmapped) -->
-<!-- bplapply(x= "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs/all_unique_filt_sRNAs_rn.fa", bowtie_align, index= ref) -->
-
-<!-- for (i in unmapped) { -->
-<!--   bowtie_align("/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs/all_unique_filt_sRNAs_rn.fa", i)} -->
-
-<!-- #convert to BED: -->
-
-<!-- bamtobed <- function(file,filtDup=FALSE){ -->
-<!--   require(GenomicAlignments) -->
-<!--   require(rtracklayer) -->
-<!--   temp <- readGAlignments(file, -->
-<!--                           param=ScanBamParam(what = "qname")) -->
-<!--   names(temp) <- mcols(temp)$qname -->
-<!--   temp <- granges(temp) -->
-
-<!--   if(filtDup) temp <- temp[!duplicated(temp),] -->
-<!--   export.bed(temp, -->
-<!--              con = gsub("\\.bam",".bed",file)) -->
-<!-- } -->
-
-<!-- #R command for bamtobed: -->
-<!-- pathtoQC <- "/rugpfs/fs0/rice_lab/scratch/krozen/Akbari_check_esiRNAs" -->
-<!-- mapped <- dir(pathtoQC , pattern= "bam$", full.names = TRUE) -->
-
-<!-- bplapply(mapped, bamtobed) -->
-
-
-<!-- ``` -->
-
+```
 
 ##Load all beds of reverse mapped smallRNA seq reads to filtered small RNAs and count
 
 ```{r}
-#small RNA seq data were downloaded from ENA: https://www.ebi.ac.uk/ena/browser/home
-#project accession: PRJNA612346
-#processed and mappd files available on my github: reprocessed_smallRNA_seq_from_Akbari_2013.zip
+#processed and mapped files available on my github: reprocessed_smallRNA_seq_from_Akbari_2013.zip
 
 Dir <- "/Users/kathryn/Reprocess_all_paper_datasets/Akbari_check_esiRNAs"
 beds <- dir(Dir, pattern="*.bed$",full.names = TRUE)
